# vodomat_server_admin

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server_admin.conf  vodomat_server.sql
admin_panel/: admin.py  forms.py  models.py
admin_panel/migrations/: 0001_initial.py  0002_city_alter_user_options.py  0003_street_alter_city_options.py  0004_route.py  0005_avtomat_alter_route_options.py
config/: urls.py
config/settings/: base.py  dev.py  production.py
nginx/: nginx.conf
requirements/: base.txt
server_panel/: admin.py  admin_filters.py  apps.py  avtomat_actions.py  dbrouters.py  forms.py  models.py
src/config/settings/: base.py  dev.py  production.py
src/server_panel/: admin.py  admin_filters.py  avtomat_actions.py  forms.py  models.py
src/templates/admin/server_panel/avtomat/: change_list.html
templates/admin/: base_site.html
