[project]
name = "vodomat-server-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "bcrypt>=4.2.1",
    "django>=5.1.5",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
]
